Fixes resize / respond / open / close issues in auto-toggle. Tried overflow-toggle, didnt like.

--- a/elements/auto-toggle.shadow.css
+++ b/elements/auto-toggle.shadow.css
@@ -2,7 +2,7 @@
 @import '../css/html.css';
 
 :host {
-    display: grid;
+    display: grid !important;
     grid-template-columns: 100%;
     grid-template-rows: 1fr;
     grid-auto-rows:  min-content;
@@ -39,6 +39,7 @@
     border: 1px solid currentcolor;
     border-radius: 4rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 :host > [part="button"]:focus {
